# cpp-study

./: .gitignore  ASCII converter Pseudo Code.md  ASCII converter.mdj  ASCIIArt.md  CMakeLists.txt  FileSystem.mdj  README.md  Sampler GrayScaler Pseudo Code.md  Sampler GrayScaler.mdj  Sampler Pseudo Code.md  Sampler.mdj  UI Pseudocode.md  UI.md  UI.mdj  Untitled.mdj  a file.txt  base_app.cpp  base_app.h  dog.cpp  dog.h  main.cpp  mdStudy.md  test.cpp  test.h  woon2.txt
.github/ISSUE_TEMPLATE/: bug.md  code-review-request.md  documentation.md  duplicate.md  help-wanted.md  invalid.md  optimization.md  question.md  redesign.md  refactoring.md  task.md  test-case-request.md
Begin/: Begin.sln
MyDx12/: MyDx12.sln
MyDx12/MyDx12/: Core.h  MyDx12.cpp  MyDx12.rc  MyDx12.vcxproj  MyDx12.vcxproj.filters  Resource.h  framework.h  pch.h
New Project/: New Project.sln
New Project/New Project/: dynamic allocation.cpp  go_for_reference.cpp  manage_memory.cpp  mat.cpp  mat.h  my_shared_ptr.cpp  my_shared_ptr.h  my_string.cpp  my_string.h  my_unique_ptr.cpp  my_unique_ptr.h  vec.cpp  vec.h
Project/: Project.sln
Project/Project/: Project.vcxproj  Project.vcxproj.filters  my_string.h  my_unique_ptr.h  vec.h
Project1/: Project1.sln
Project1/Project1/: Project1.vcxproj
Source/: readme.txt
Source/feature-ui/: feature-ui.sln
Source/feature-ui/feature-ui/: Button.cpp  Button.h  UI.cpp  UI.h  feature-ui.vcxproj  feature-ui.vcxproj.filters  main.cpp
assignment-sprint1-write-cpp-classes/: 1.create source&header file.md  10.define member functions.md  2.write preprocessor directives.md  3.go for reference.md  3.make class outline.md  4.declare member functions.md  4.understand qualifiers, const & static keyword.md  5.declare member variables.md  5.make class outline.md  6.declare member functions.md  6.manage memory.md  7.allocate&deallocate memory dynamically.md  7.declare member variables.md  8.define member functions.md  8.manage memory.md  9.allocate&deallocate memory dynamically.md  go for reference  go for reference.md  understand qualifiers, const & static keyword
assignment-sprint1-write-cpp-classes/Project1/Project1/: Project1.vcxproj  mat.h
assignment-sprint1-write-cpp-classes/assignment/: Project1.sln
assignment-sprint1-write-cpp-classes/assignment-sprint1/assignment-sprint1/: my_shared_ptr.h  my_string.h
assignment-sprint1-write-cpp-classes/assignment/Project1/: Project1.vcxproj  Project1.vcxproj.filters  dynamic allocation.cpp  go_for_reference.cpp  manage_memory.cpp  mat.h  my_shared_ptr.h  my_string.cpp  my_string.h  my_unique_ptr.h  vec.h  소스.cpp
core/: main.cpp
dataStructure/Project1/Project1/: LinkedList.h  MyLinkedList.h  Queue.h  Stack.h  Tree.h  main.cpp
docs/: CODEOWNERS  agile_methodology.md  assign_jira_issue_to_branch.md  branch.md  github_desktop_guide.md  jira_git.md  jira_guide.md  markdown.md  pull_request.md  rabel_guide.md  scrum.md  work_tips.md
hoon_solution_test/: hoon_solution_test.sln
hoon_solution_test/hoon_solution_test/: alloc_log.h  my_exception.h  my_string.h  my_string.inl  my_string_test.cpp  my_string_test_cases.h
html-docs/contents/: element_index.html  navigation.html
jong-solution-test/mystring_test/mystring_test/: mystring_test.vcxproj  mystring_test.vcxproj.filters
jong_string_benchmark/string_benchmark/string_benchmark/: string_benchmark.vcxproj  string_benchmark.vcxproj.filters
my_shared_ptr/: my_shared_ptr.h
my_unique_ptr/: my_unique_ptr.inl
readme/: agile_methodology.md  branch.md  github_desktop_guide.md  jira_guide.md  pull_request.md  rabel_guide.md  scrum.md
solutions-sprint1-write-cpp-classes/: alloc_log.h  my_exception.h  my_format.h  my_shared_ptr.h  my_shared_ptr.inl  my_string.h  my_string.inl  my_string_test.cpp  my_unique_ptr.h  my_unique_ptr.inl  my_unique_ptr_app.cpp  my_unique_ptr_app.h  my_utils.h  undef_macros.inl
string_benchmark/: alloc_log.h  benchmark.cpp  constants.h  dbcreation.cpp  timefunc.h
win32/: AI.cpp  AI.h  CAnimation.cpp  CAnimation.h  CAnimator.cpp  CAnimator.h  CBackGround.cpp  CBackGround.h  CBtnUI.cpp  CBtnUI.h  CCamera.cpp  CCamera.h  CCollider.cpp  CCollider.h  CCollisionMgr.cpp  CCollisionMgr.h  CCore.cpp  CCore.h  CEventMgr.cpp  CEventMgr.h  CGravity.cpp  CGravity.h  CGround.cpp  CGround.h  CIdleState.cpp  CIdleState.h  CKeyMgr.cpp  CKeyMgr.h  CMissile.cpp  CMissile.h  CMonFactory.cpp  CMonFactory.h  CMonster.cpp  CMonster.h  CObject.cpp  CObject.h  CPanelUI.cpp  CPanelUI.h  CPathMgr.cpp  CPathMgr.h  (+41 more)
win32_0816/: win32_0816.sln
win32_0816/win32_0816/: AI.cpp  AI.h  CAnimation.cpp  CAnimator.cpp  CAnimator.h  CBackGround.cpp  CBackGround.h  CBtnUI.cpp  CBtnUI.h  CCamera.cpp  CCamera.h  CCollider.cpp  CCollider.h  CCore.cpp  CCore.h  CEventMgr.cpp  CEventMgr.h  CGravity.cpp  CGround.cpp  CGround.h  CIdleState.cpp  CKeyMgr.cpp  CMissile.cpp  CMissile.h  CMonster.h  CObject.cpp  CObject.h  CPlayer.cpp  CPlayer.h  CResMgr.h  CScene.h  CSceneMgr.cpp  CSceneMgr.h  CScene_Enter.cpp  CScene_Enter.h  CState.h  CTexture.h  CTile.h  CTimeMgr.cpp  CTimeMgr.h  (+14 more)
